--- a/server/bin/plugins/gga_parser.py.dist
+++ b/server/bin/plugins/gga_parser.py.dist
@@ -72,7 +72,7 @@ MAX_DELTA_T = pd.Timedelta('10 seconds')
 
 class GGAPlugin(OpenVDMPluginCSV):
 
-    def __init__(self, raw_cols, proc_cols, crop_cols, csvkit=False, start_dt=None, stop_dt=None, time_format="%m/%d/%y %H:%M:%S.%f"):
+    def __init__(self, raw_cols, proc_cols, csvkit=False, start_dt=None, stop_dt=None, time_format="%Y/%m/%dT%H:%M:%S.%f"):
         super().__init__(csvkit=csvkit)
         self.raw_cols = raw_cols
         self.proc_cols = proc_cols
@@ -99,7 +99,7 @@ class GGAPlugin(OpenVDMPluginCSV):
           
         raw_into_df = { value: [] for key, value in enumerate(self.proc_cols) }
 
-        logging.info("Parsing data file...")
+        logging.debug("Parsing data file...")
         with open(datafile, 'r') as csvfile:
             reader = csv.DictReader( csvfile, self.raw_cols)
 
@@ -141,7 +141,8 @@ class GGAPlugin(OpenVDMPluginCSV):
 
         # Convert Date/time column to datetime objects
         logging.debug("Converting data_time to datetime datatype...")
-        # df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], infer_datetime_format=True)
+        #df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], infer_datetime_format=True)
+        
         #04/28/2012,00:00:00.656
         df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], format=self.time_format)
 
@@ -163,11 +164,11 @@ class GGAPlugin(OpenVDMPluginCSV):
             return None
 
         # Calculate deltaT column
-        logging.debug('Calculating deltaT column...')
+        logging.debug('Building deltaT column...')
         df_proc = df_proc.join(df_proc['date_time'].diff().to_frame(name='deltaT'))
 
         # Calculate distance column
-        logging.debug("Calculating distance column...")
+        logging.debug("Building distance column...")
         df_proc['point'] = df_proc.apply(lambda row: Point(latitude=row['latitude'], longitude=row['longitude']), axis=1)
         df_proc['point_next'] = df_proc['point'].shift(1)
         df_proc.loc[df_proc['point_next'].isna(), 'point_next'] = None
@@ -177,10 +178,10 @@ class GGAPlugin(OpenVDMPluginCSV):
         df_proc = df_proc.drop('point', axis=1)
 
         # Calculate velocity column
-        logging.debug("Calculate velocity column...")
+        logging.debug("Building velocity column...")
         df_proc['velocity'] = df_proc['distance'] / (df_proc.deltaT.dt.total_seconds() / 3600)
 
-        logging.debug("Calculating stats...")
+        logging.debug("Tabulating statistics...")
         self.add_stat({'statName': 'Row Validity', 'statType': 'rowValidity', 'statData': [len(df_proc), errors]})
         self.add_stat({'statName': 'Geographic Bounds', 'statUnit': 'ddeg', 'statType': 'geoBounds', 'statData': [round(df_proc.latitude.max(),3),round(df_proc.longitude.max(),3),round(df_proc.latitude.min(),3),round(df_proc.longitude.min(),3)]})
         self.add_stat({'statName': 'Velocity Bounds', 'statUnit': 'kts', 'statType': 'bounds', 'statData': [round(df_proc.velocity.min(),3), 999999.999 if np.isinf(df_proc.velocity.max()) else round(df_proc.velocity.max(),3)]})
@@ -194,7 +195,7 @@ class GGAPlugin(OpenVDMPluginCSV):
         self.add_stat({'statName': 'Altitude', 'statUnit': 'm', 'statType': 'bounds', 'statData': [round(df_proc.altitude.min(),3), round(df_proc.altitude.max(),3)]})
         self.add_stat({'statName': 'Height WGS84', 'statUnit': 'm', 'statType': 'bounds', 'statData': [round(df_proc.height_wgs84.min(),3), round(df_proc.height_wgs84.max(),3)]})
 
-        logging.debug("Calculating quality tests...")
+        logging.debug("Running quality tests...")
         # % of bad rows in datafile
         error_rate = errors / len(df_proc)
         if error_rate > .25:
@@ -250,7 +251,7 @@ class GGAPlugin(OpenVDMPluginCSV):
         }
 
         for ev in events:
-            logging.debug("EV: {}".format(ev))
+            # logging.debug("EV: {}".format(ev))
             feature = {
                 'type':'Feature',
                 'geometry':{
@@ -300,13 +301,13 @@ if __name__ == "__main__":
     parsed_args.verbosity = min(parsed_args.verbosity, max(LOG_LEVELS))
     logging.getLogger().setLevel(LOG_LEVELS[parsed_args.verbosity])
 
-    logging.debug("start: {}".format(parsed_args.startDT))
-    ovdm_plugin = GGAPlugin(RAW_COLUMNS, PROC_COLUMNS, CROP_COLUMNS, csvkit=parsed_args.csvkit, start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT)
+    ovdm_plugin = GGAPlugin(RAW_COLUMNS, PROC_COLUMNS, csvkit=parsed_args.csvkit, start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format="%m/%d/%Y %H:%M:%S.%f")
 
     try:
         logging.info("Processing file: {}".format(parsed_args.dataFile))
         ovdm_plugin.process_file(parsed_args.dataFile)
         print(json.dumps(ovdm_plugin.get_plugin_data(), cls=NpEncoder))
+        logging.info("Done!")
     except Exception as err:
         logging.error(str(err))
         raise err
